--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
-sublime-project
-sublime-workspace
-tmp
-snapshots
-project/project
-project/target
-target
+#### joe made this: http://goel.io/joe
+
+#####=== Scala ===#####
+
+*.class
+*.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+
+.idea
